--- a/apps/components/package.json
+++ b/apps/components/package.json
@@ -18,8 +18,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "graphql-request": "3.7.0",
+    "object-path": "0.11.8",
+    "recursive-iterator": "3.3.0",
+    "uuid": "8.3.2",
     "vite-plugin-vue2": "^1.9.3",
-    "vue": "2"
+    "vue": "2",
+    "vue-flatpickr-component": "8.1.7",
+    "vuedraggable": "2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.0.0",
